force-app/shared/objects/Environment__c/Environment__c.object-meta.xml
<CustomObject>
    <description>Contains information about a given Salesforce Org</description>
    <label>Environment</label>
    <nameField>
        <label>Environment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Environments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>