force-app/shared/objects/Environment__c/fields/LastQueried__c.field-meta.xml
<CustomField>
    <fullName>LastQueried__c</fullName>
    <description
    >The date and time the environment was last sucessfully queried and updated with installed package information</description>
    <inlineHelpText
    >The date and time the environment was last sucessfully queried and updated with installed package information</inlineHelpText>
    <label>Last Queried</label>
    <type>DateTime</type>
</CustomField>