force-app/shared/objects/Environment__c/fields/NamedCredential__c.field-meta.xml
<CustomField>
    <fullName>NamedCredential__c</fullName>
    <description
    >API Name for the Named Credential related to the org</description>
    <inlineHelpText
    >API Name for the Named Credential related to the org</inlineHelpText>
    <label>Named Credential</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>