force-app/shared/objects/Environment__c/fields/SortOrder__c.field-meta.xml
<CustomField>
    <fullName>SortOrder__c</fullName>
    <description
    >The org&#39;s placement in the pipeline. Ascending from left-to-right.</description>
    <label>Sort Order</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>