force-app/shared/objects/Environment__c/listViews/All_Environments.listView-meta.xml
<ListView>
    <fullName>All_Environments</fullName>
    <columns>NAME</columns>
    <columns>SortOrder__c</columns>
    <columns>LastQueried__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Environments</label>
</ListView>